# ai_code_stats

./: E2E_TEST_RESULTS.md  FASTAPI_IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.txt  PHASE1_SUMMARY.md  PHASE_3_COMPLETION_SUMMARY.md  README.md  final_verification.py  prod-lens  prodlens-src  test_e2e_workflow.py
.prod-lens/: test-e2e-cache.db
api/: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  QUICKSTART.md  README.md  auth.py  config.py  database.py  docker-compose.yml  litellm-config.yaml  main.py  models.py  pytest.ini  requirements.txt
dashboard/: API_INTEGRATION.md  IMPLEMENTATION_STATUS.md  QUICKSTART.md  README.md  RESPONSIVE_DESIGN.md  TESTING_GUIDE.md
dev-agent-lens/: .env.example  .gitignore  README.md  (+9 more)
dev-agent-lens/examples/python/: .env.example  basic_usage.py  basic_usage_oauth.py  observable_agent.py  pyproject.toml
dev-agent-lens/scripts/: .env.example  .gitignore  README.md  main.py  pyproject.toml
dev-agent-lens/scripts/.prod-lens/: test-cache.db
dev-agent-lens/scripts/src/: __init__.py  analyze_sessions.py  compare_spans.py  export_arize.py  export_phoenix.py  export_traces.py  reconstruct_sessions.py
dev-agent-lens/scripts/src/prodlens/: README.md  __init__.py  aggregation.py  cli.py  github_etl.py  metrics.py  schemas.py  storage.py  trace_ingestion.py  trace_normalizer.py
dev-agent-lens/scripts/tests/: test_aggregation.py  test_github_etl.py  test_metrics.py  test_storage_aggregation.py  test_trace_ingestion.py  test_trace_normalizer.py
(+75 files in other folders)
