[project]
name = "dev-agent-lens-scripts"
version = "1.0.0"
description = "Utility scripts for Dev-Agent-Lens data export and analysis"
requires-python = ">=3.10"
dependencies = [
    "arize>=7.0.3",
    "arize-phoenix>=4.0.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyarrow>=14.0.0",
    "packaging>=24.0",
    "openinference-semantic-conventions>=0.1.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-semantic-conventions>=0.42b0",
    "requests>=2.31.0",
    "scipy>=1.11.0",
    "pytest>=7.0.0",
]
