[project]
name = "python"
version = "1.0.0"
description = "Claude Agent SDK examples with Dev-Agent-Lens observability"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk",
    "python-dotenv>=1.0.0",
    "asyncio",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]